--- a/diplomas.html
+++ b/diplomas.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Diplomas</title>
+  <title>Global Academy - Diplomas</title>
+  
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <!-- Google Web Fonts -->
@@ -28,7 +29,7 @@
     <link href="css/style.css" rel="stylesheet">
   
 </head>
-<body>
+<body class="programs-page-gradient">
       <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
@@ -43,7 +44,7 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <!-- Regular Links -->
                 <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link active">About</a>
+                <a href="about.html" class="nav-item nav-link">About</a>
 
                 <!-- Programs Dropdown -->
                 <div class="nav-item dropdown">
@@ -63,7 +64,7 @@
 
                 <!-- Diplomas Dropdown -->
                 <div class="nav-item dropdown">
-                    <a href="diplomas.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
+                    <a href="diplomas.html" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown"
                       onclick="window.location.href='diplomas.html'">Diplomas</a>
                     <div class="dropdown-menu fade-down m-0">
                         <a href="#" class="dropdown-item">Training and Development</a>
@@ -97,44 +98,227 @@
 
 
     <!-- Navbar End -->
-  <section class="our-services our-values container py-5">
-    <h2 class="text-center mb-5">Diplomas</h1>
-    <div class="row g-4">
-      <div class="col-md-6">
-        <a href="Training and Development.html" class="program-link"
-          style="background-image: url('https://images.unsplash.com/photo-1573497019410-0e1c9a5f35d3');">
-          Training and Development
-        </a>
-      </div>
-      <div class="col-md-6">
-        <a href="Accounting and Finance.html" class="program-link"
-          style="background-image: url('https://images.unsplash.com/photo-1581091012184-7cbe64200b51');">
-          Accounting and Finance
-        </a>
-      </div>
-      <div class="col-md-6">
-        <a href=" Management Sciences.html" class="program-link"
-          style="background-image: url('https://images.unsplash.com/photo-1581090700227-1c1aef4c82e5');">
-           Management Sciences
-        </a>
-      </div>
-      <div class="col-md-6">
-        <a href="Women's Leadership.html" class="program-link"
-          style="background-image: url('https://images.unsplash.com/photo-1605902711622-cfb43c4437d2');">
-          Women's Leadership
-        </a>
-      </div>
-      <div class="col-md-6">
-        <a href="Procurement & Supply Chain.html" class="program-link"
-          style="background-image: url('https://images.unsplash.com/photo-1581091215367-59f1b6f8ec87');">
-          Project Management
-        </a>
-      </div>
-    
-    </div>
-  </section>
+  
+ <div class="container py-5">
+  
+  <!--section -->
+      <div class="section-title-container">
+        <h2 class="section-title">Our Diplomas</h2>
+      <div class="section-title-divider"></div>
 
-  <!-- Bootstrap JS (optional) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <div class="row g-4">
+
+    <!-- Diploma 1 -->
+    <div class="col-md-4">
+      <div class="card shadow-sm h-100">
+        <img src="https://images.unsplash.com/photo-1573497019410-0e1c9a5f35d3?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Training and Development">
+        <div class="card-body text-center">
+          <h5 class="card-title">Training and Development</h5>
+        </div>
+      </div>
+    </div>
+
+    <!-- Diploma 2 -->
+    <div class="col-md-4">
+      <div class="card shadow-sm h-100">
+        <img src="https://images.unsplash.com/photo-1581091012184-7cbe64200b51?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Accounting and Finance">
+        <div class="card-body text-center">
+          <h5 class="card-title">Accounting and Finance</h5>
+        </div>
+      </div>
+    </div>
+
+    <!-- Diploma 3 -->
+    <div class="col-md-4">
+      <div class="card shadow-sm h-100">
+        <img src="https://images.unsplash.com/photo-1581090700227-1c1aef4c82e5?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Management Sciences">
+        <div class="card-body text-center">
+          <h5 class="card-title">Management Sciences</h5>
+        </div>
+      </div>
+    </div>
+
+    <!-- Diploma 4 -->
+    <div class="col-md-4">
+      <div class="card shadow-sm h-100">
+        <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437d2?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Women's Leadership">
+        <div class="card-body text-center">
+          <h5 class="card-title">Women's Leadership</h5>
+        </div>
+      </div>
+    </div>
+
+    <!-- Diploma 5 -->
+    <div class="col-md-4">
+      <div class="card shadow-sm h-100">
+        <img src="https://images.unsplash.com/photo-1581091215367-59f1b6f8ec87?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Project Management">
+        <div class="card-body text-center">
+          <h5 class="card-title">Project Management</h5>
+        </div>
+      </div>
+    </div>
+
+    <!-- Diploma 6 -->
+    <div class="col-md-4">
+      <div class="card shadow-sm h-100">
+        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Business Administration">
+        <div class="card-body text-center">
+          <h5 class="card-title">Business Administration</h5>
+        </div>
+      </div>
+    </div>
+
+    <!-- Additional Diplomas (Hidden Initially) -->
+    <!-- Diploma 7 -->
+    <div class="col-md-4 diploma-item hidden-diploma" style="display: none;">
+      <div class="card shadow-sm h-100">
+        <img src="https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Digital Transformation">
+        <div class="card-body text-center">
+          <h5 class="card-title">Digital Transformation</h5>
+        </div>
+      </div>
+    </div>
+
+    <!-- Diploma 8 -->
+    <div class="col-md-4 diploma-item hidden-diploma" style="display: none;">
+      <div class="card shadow-sm h-100">
+        <img src="https://images.unsplash.com/photo-1560472354-b33ff0c44a43?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Strategic Planning">
+        <div class="card-body text-center">
+          <h5 class="card-title">Strategic Planning</h5>
+        </div>
+      </div>
+    </div>
+
+    <!-- Diploma 9 -->
+    <div class="col-md-4 diploma-item hidden-diploma" style="display: none;">
+      <div class="card shadow-sm h-100">
+        <img src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Quality Management">
+        <div class="card-body text-center">
+          <h5 class="card-title">Quality Management</h5>
+        </div>
+      </div>
+    </div>
+
+    <!-- Diploma 10 -->
+    <div class="col-md-4 diploma-item hidden-diploma" style="display: none;">
+      <div class="card shadow-sm h-100">
+        <img src="https://images.unsplash.com/photo-1556761175-4b46a572b786?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Executive Leadership">
+        <div class="card-body text-center">
+          <h5 class="card-title">Executive Leadership</h5>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+  <!-- Toggle Button -->
+  <div class="text-center mt-4">
+    <button id="toggleDiplomasBtn" class="btn btn-primary py-3 px-5">
+      <i class="fas fa-plus me-2"></i>Show All Diplomas
+    </button>
+  </div>
+</div>
+<!-- end section -->
+
+    <!-- Footer Start -->
+    <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container py-5">
+            <div class="row g-5">
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3">Quick Link</h4>
+                    <a class="btn btn-link" href="">About Us</a>
+                    <a class="btn btn-link" href="">Contact Us</a>
+                    <a class="btn btn-link" href="">Privacy Policy</a>
+                    <a class="btn btn-link" href="">Terms & Condition</a>
+                    <a class="btn btn-link" href="">FAQs & Help</a>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3">Contact</h4>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Egypt</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <div class="d-flex pt-2">
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+                <!-- Gallery
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3">Gallery</h4>
+                    <div class="row g-2 pt-2">
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/course-1.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/course-2.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/course-3.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/course-2.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/course-3.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/course-1.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+                -->
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3">Newsletter</h4>
+                    <p>Sign-up for our newsletter</p>
+                    <div class="position-relative mx-auto" style="max-width: 400px;">
+                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
+                        <button type="button"
+                            class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="copyright">
+                <div class="row">
+                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                        &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
+
+                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                        Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a><br><br>
+                        Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
+                    </div>
+                    <div class="col-md-6 text-center text-md-end">
+                        <div class="footer-menu">
+                            <a href="">Home</a>
+                            <a href="">Cookies</a>
+                            <a href="">Help</a>
+                            <a href="">FQAs</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Footer End -->
+
+
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+
+    <!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Animation & UI Libraries -->
+    <script src="lib/wow/wow.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+
+    <!-- Main JavaScript -->
+    <script src="js/main.js"></script>
 </body>
 </html>
