--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
     </div>
 
-    <!-- Features Overview Section -->
+    <!-- Features Overview Section
     <section class="features-section py-5">
         <div class="container">
             <div class="row">
@@ -174,7 +174,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- About Us Section -->
     <section id="about" class="about-us-section py-5">
@@ -255,7 +255,7 @@
                                     <h5 class="text-primary text-uppercase mb-3 animate__animated animate__slideInDown">Leadership & Management</h5>
                                     <h1 class="display-5 animate__animated animate__slideInDown">Shape Tomorrow's Leaders</h1>
                                     <p class="lead">Develop executive skills, strategic thinking, and team management capabilities through our comprehensive leadership programs.</p>
-                                    <a class="btn btn-primary me-2" href="programs.html">Explore Programs</a>
+                                    <a class="btn btn-primary me-2" href="diplomas.html">Explore Diplomas</a>
                                     <a class="btn btn-light" href="#contact">Enroll Now</a>
                                 </div>
                             </div>
@@ -263,25 +263,7 @@
                     </div>
                 </div>
 
-                <!-- Slide 2 - Digital Innovation -->
-                <div class="item">
-                    <img src="https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=500" alt="Digital Innovation">
-                    <div class="overlay">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-sm-10 col-lg-8 hero-text">
-                                    <h5 class="text-primary text-uppercase mb-3 animate__animated animate__slideInDown">Digital Transformation</h5>
-                                    <h1 class="display-5 animate__animated animate__slideInDown">Future-Ready Skills</h1>
-                                    <p class="lead">Master digital technologies, data analytics, and innovative business models to thrive in the digital economy.</p>
-                                    <a class="btn btn-primary me-2" href="programs.html">View Courses</a>
-                                    <a class="btn btn-light" href="#contact">Get Started</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Slide 3 - Professional Development -->
+                <!-- Slide 2 - Professional Development -->
                 <div class="item">
                     <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=500" alt="Professional Development">
                     <div class="overlay">
@@ -301,6 +283,9 @@
             </div>
         </div>
     </section>
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+
     <!-- Footer Start -->
   
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
