--- a/programs.html
+++ b/programs.html
@@ -29,7 +29,7 @@
     <link href="css/style.css" rel="stylesheet">
   
 </head>
-<body>
+<body class="programs-page-gradient">
   
   <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
@@ -45,11 +45,11 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <!-- Regular Links -->
                 <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link active">About</a>
+                <a href="about.html" class="nav-item nav-link">About</a>
 
                 <!-- Programs Dropdown -->
                 <div class="nav-item dropdown">
-                    <a href="programs.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
+                    <a href="programs.html" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown"
                         onclick="window.location.href='programs.html'">Programs</a>
                     <div class="dropdown-menu fade-down m-0">
                         <a href="#" class="dropdown-item">Leadership & Management</a>
@@ -181,22 +181,160 @@
       </div>
     </div>
 
+    <!-- Additional Programs (Hidden Initially) -->
+    <!-- Program 8 -->
+    <div class="col-md-4 program-item hidden-program" style="display: none;">
+      <div class="card shadow-sm h-100">
+        <img src="https://picsum.photos/400/250?random=8" class="card-img-top" alt="Digital Marketing">
+        <div class="card-body text-center">
+          <h5 class="card-title">Digital Marketing</h5>
+        </div>
+      </div>
+    </div>
+
+    <!-- Program 9 -->
+    <div class="col-md-4 program-item hidden-program" style="display: none;">
+      <div class="card shadow-sm h-100">
+        <img src="https://picsum.photos/400/250?random=9" class="card-img-top" alt="Data Analytics">
+        <div class="card-body text-center">
+          <h5 class="card-title">Data Analytics</h5>
+        </div>
+      </div>
+    </div>
+
+    <!-- Program 10 -->
+    <div class="col-md-4 program-item hidden-program" style="display: none;">
+      <div class="card shadow-sm h-100">
+        <img src="https://picsum.photos/400/250?random=10" class="card-img-top" alt="Cybersecurity">
+        <div class="card-body text-center">
+          <h5 class="card-title">Cybersecurity</h5>
+        </div>
+      </div>
+    </div>
+
+    <!-- Program 11 -->
+    <div class="col-md-4 program-item hidden-program" style="display: none;">
+      <div class="card shadow-sm h-100">
+        <img src="https://picsum.photos/400/250?random=11" class="card-img-top" alt="Project Leadership">
+        <div class="card-body text-center">
+          <h5 class="card-title">Project Leadership</h5>
+        </div>
+      </div>
+    </div>
+
+    <!-- Program 12 -->
+    <div class="col-md-4 program-item hidden-program" style="display: none;">
+      <div class="card shadow-sm h-100">
+        <img src="https://picsum.photos/400/250?random=12" class="card-img-top" alt="International Business">
+        <div class="card-body text-center">
+          <h5 class="card-title">International Business</h5>
+        </div>
+      </div>
+    </div>
+
   </div> <!-- row end -->
 
-  <!-- Button -->
-  <!-- <div class="text-center mt-4">
-    <a href="#" class="btn btn-primary py-3 px-5">View All Programs</a>
+</div>
+
+  <!-- Toggle Button -->
+  <div class="text-center mt-4">
+    <button id="toggleProgramsBtn" class="btn btn-primary py-3 px-5">
+      <i class="fas fa-plus me-2"></i>Show All Programs
+    </button>
   </div>
-</div> -->
+</div>
 <!-- end section -->
 
+    <!-- Footer Start -->
+    <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container py-5">
+            <div class="row g-5">
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3">Quick Link</h4>
+                    <a class="btn btn-link" href="">About Us</a>
+                    <a class="btn btn-link" href="">Contact Us</a>
+                    <a class="btn btn-link" href="">Privacy Policy</a>
+                    <a class="btn btn-link" href="">Terms & Condition</a>
+                    <a class="btn btn-link" href="">FAQs & Help</a>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3">Contact</h4>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Egypt</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <div class="d-flex pt-2">
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+                <!-- Gallery
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3">Gallery</h4>
+                    <div class="row g-2 pt-2">
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/course-1.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/course-2.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/course-3.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/course-2.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/course-3.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/course-1.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+                -->
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3">Newsletter</h4>
+                    <p>Sign-up for our newsletter</p>
+                    <div class="position-relative mx-auto" style="max-width: 400px;">
+                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
+                        <button type="button"
+                            class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="copyright">
+                <div class="row">
+                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                        &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
 
-  <!-- Bootstrap JS (optional) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                        Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a><br><br>
+                        Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
+                    </div>
+                    <div class="col-md-6 text-center text-md-end">
+                        <div class="footer-menu">
+                            <a href="">Home</a>
+                            <a href="">Cookies</a>
+                            <a href="">Help</a>
+                            <a href="">FQAs</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Footer End -->
 
-      <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-/xUjone5FWt+ZBmdMSaUXlwP8s1a5L8kkSxQZkmg7cKeV7jZGk5p+UnzKHm6Z9Z7" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-qgRpxhFpjIm+hXGZ5jehKEl2+u8q6EzqkbnMbPtAwxg+TxQpFuT+d+kFj6iyrIig" crossorigin="anonymous"></script>
+
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+
+    <!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Animation & UI Libraries -->
     <script src="lib/wow/wow.min.js"></script>
